--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,13 +70,13 @@
 <section>
     <div class="tours_part">
         <h2 class="tours_heading">Tour Photos</h2>
-        <a href="../tours" target="_blank">
+        <a href="../images/tours/canopywalk.jpg" target="_blank">
             <img src="../images/tours/canopywalk.jpg" alt="A canopy bridge" class="skywalk_pic_link">
         </a>
-        <a href="../tours" target="_blank">
+        <a href="../images/tours/riverhomepgpic.jpg" target="_blank">
             <img src="../images/tours/riverhomepgpic.jpg" alt="A boat on a river" class="riverboat_pic_link">
         </a>
-        <a href="../tours" target="_blank">
+        <a href="../images/tours/hikehomepgpic.jpg" target="_blank">
             <img src="../images/tours/hikehomepgpic.jpg" alt="A forest" class="hiking_pic_link">
         </a>
     </div>
